--- a/package.xml
+++ b/package.xml
@@ -4,15 +4,16 @@
   <version>0.0.0</version>
   <description>IMU MPU6050 ROS driver for Raspberry boards</description>
 
-  <author email="mateusmenezes95@gmail">Mateus Meneses</maintainer>
-  <maintainer email="mateusmenezes95@gmail">Mateus Meneses</maintainer>
+  <maintainer email="mateusmenezes95@gmail.com">Mateus Menezes</maintainer>
+  <author email="mateusmenezes95@gmail.com">Mateus Menezes</author>
 
   <license>MIT</license>
 
   <buildtool_depend>catkin</buildtool_depend>
 
   <depend>roscpp</depend>
-  <depend>diagnostic_msgs</depend>
+  <depend>i2c_device_ros</depend>
+  <!-- <depend>diagnostic_msgs</depend> -->
   <depend>sensor_msgs</depend>
 
 </package>
