--- a/package.xml
+++ b/package.xml
@@ -16,4 +16,6 @@
   <!-- <depend>diagnostic_msgs</depend> -->
   <depend>sensor_msgs</depend>
 
+  <build_depend>cmake_modules</build_depend>
+
 </package>
