--- a/config/mpu_settings.yaml
+++ b/config/mpu_settings.yaml
@@ -10,10 +10,14 @@ pub_rate: 10
 # Frame if of IMU message (default: "imu")
 frame_id: "imu"
 
+# Offsets to fix wrong values caused by misalignment
+# Sequence is (ax, ay, az, gx, gy, gz)
+axes_offsets: [-1970, 78, 1203, 81, -13, 9]
+
 # PID constants used in calibration procedure
 ki: 0.2
 kp: 0.1
 
-# Offsets to fix wrong values caused by misalignment
-# Sequence is (ax, ay, az, gx, gy, gz)
-axes_offsets: [-1970, 78, 1203, 81, -13, 9]
+# The calibration process is finished when the error is aproximate zero with
+# the precision set by delta 
+delta: 0.5
