:books: Improve documentation of config file

--- a/config/mpu_settings.yaml
+++ b/config/mpu_settings.yaml
@@ -1,4 +1,4 @@
-# I2C Bus URI used to comunicate with I2C devices (default: "/dev/i2c-1"
+# I2C Bus URI used to comunicate with I2C devices (default: "/dev/i2c-1")
 bus_uri: "/dev/i2c-1"
 
 # I2C address of MPU6050 (default: 0x68)
@@ -11,13 +11,13 @@ pub_rate: 10
 frame_id: "imu"
 
 # Offsets to fix wrong values caused by misalignment
-# Sequence is (ax, ay, az, gx, gy, gz)
+# Sequence is (ax, ay, az, gx, gy, gz) (default: [0, 0, 0, 0, 0, 0])
 axes_offsets: [-1970, 78, 1203, 81, -13, 9]
 
 # PID constants used in calibration procedure
-ki: 0.2
-kp: 0.1
+ki: 0.2 # (default: 0.1)
+kp: 0.1 # (default: 0.1)
 
 # The calibration process is finished when the error is aproximate zero with
-# the precision set by delta 
+# the precision set by delta (default: 0.5) 
 delta: 0.5
