--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,7 @@ endif()
 find_package(ament_cmake REQUIRED)
 find_package(rclcpp REQUIRED)
 find_package(sensor_msgs REQUIRED)
+find_package(eigen3_cmake_module REQUIRED)
 find_package(Eigen3 REQUIRED)
 
 include_directories(
@@ -21,7 +22,14 @@ include_directories(
 add_library(mpu6050_node_lib
   src/mpu6050_node.cpp
   src/mpu6050.cpp
+  src/i2c_device.cpp
 )
+ament_target_dependencies(mpu6050_node_lib rclcpp sensor_msgs)
+
+# Link against ROS 2 libraries
+# target_link_libraries(mpu6050_node_lib
+#   ${rclcpp_LIBRARIES}
+# )
 
 # Define executable targets
 add_executable(mpu6050_node src/main.cpp)
@@ -43,11 +51,11 @@ install(DIRECTORY include/
   DESTINATION include)
 
 # Uncomment if you have package specific launch files, config files or other files to install
-# install(DIRECTORY
-#   launch
-#   config
-#   DESTINATION share/${PROJECT_NAME}
-# )
+install(DIRECTORY
+  launch
+  config
+  DESTINATION share/${PROJECT_NAME}
+)
 
 # Export dependencies
 ament_export_include_directories(include)
