--- a/package.xml
+++ b/package.xml
@@ -15,10 +15,11 @@
   <buildtool_depend>ament_cmake</buildtool_depend>
 
   <!-- Dependencies -->
-  <depend>rclcpp</depend>
+  <build_depend>rclcpp</build_depend>
+  <exec_depend>rclcpp</exec_depend>
   <depend>sensor_msgs</depend>
   <!-- i2c_device_ros might need to be ported to ROS2 or replaced with an equivalent package if it's a ROS1 package -->
-  <depend>i2c_device_ros</depend>
+  <!-- <depend>i2c_device_ros</depend> -->
   
   <!-- Eigen3 is found directly via find_package in CMakeLists.txt, so it's listed as a build depend -->
   <!-- <build_depend>eigen3_cmake_module</build_depend>
